--- a/view/theme/loozah/style.css
+++ b/view/theme/loozah/style.css
@@ -2341,6 +2341,10 @@ a.mail-list-link {
 .profile-match-wrapper {
 	float: left;
 	padding: 10px;
+    width: 120px;
+    height: 120px;
+    scroll: auto;
+
 }
 #profile-match-wrapper-end {
 	clear: both;
